# MoleculeAutoCorrect

./: AutoCorrectMolecule.py  CMakeLists.txt  README.md
source/: AutoCorrectMolecule.cpp  FunctionalArithmetic.hpp  HighlightMoleculeErrors.cpp  MoleculeAutoCorrect.hpp  TreeSearch.hpp
source/wrap/: pyChemicalDictionary.hpp  pyMoleculeAutoCorrect.cpp  pyMoleculeAutoCorrect.hpp
